--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 
-    <title>Final Project</title>
+    <title>Luffy</title>
 
     <style>
       body {
@@ -320,10 +320,10 @@
           <h2>
             Quotes
           </h2>
-          <p>“I’m going to be King of the Pirates!”
+          <p>“I’m going to be King of the Pirates!”</p><br><br><br>
 
 
-            “I don’t want to conquer anything. I just think the guy with the most freedom in this whole ocean… is the Pirate King.”</p><br><br><br>
+          <p> “I don’t want to conquer anything. I just think the guy with the most freedom in this whole ocean… is the Pirate King.”</p><br><br><br>
 
 
           <br>
