--- a/index.html
+++ b/index.html
@@ -278,17 +278,17 @@
 
   </head>
 
-
+ 
   <body>
 
 
     <div class="page-wrapper">
 
-      <div>
+      <div> 
         <nav>
-          <a href="#crew">HOME</a>
-          <a href="#luffy">CREW</a>
-          <a href="#devil-fruits">DEVIL FRUITS</a>
+          <a href="https://hafsa5511.github.io/Final-Project/">HOME</a>
+          <a href="https://hafsa5511.github.io/luffy/">CREW</a>
+          <a href="https://hafsa5511.github.io/fruits/">DEVIL FRUITS</a>
         </nav>
 
 
