--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div> 
         <nav>
           <a href="https://hafsa5511.github.io/Final-Project/">HOME</a>
-          <a href="https://hafsa5511.github.io/luffy/">CREW</a>
+          <a href="https://hafsa5511.github.io/crew/">CREW</a>
           <a href="https://hafsa5511.github.io/fruits/">DEVIL FRUITS</a>
         </nav>
 
